syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package ozon.route256.postgres;
option csharp_namespace = "Ozon.Route256.Postgres.Grpc";

import "money.proto";

service OrderService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc GetStream (GetRequest) returns (stream GetStreamResponse);
  rpc ChangeState (ChangeStateRequest) returns (google.protobuf.Empty);
}

message GetRequest {
  repeated int64 order_id = 1;
}

message GetResponse {
  repeated Order orders = 1;
}

message GetStreamResponse {
  Order order = 1;
}

message ChangeStateRequest {
  int64 order_id = 1;
  OrderState state = 2;
}

message Order {
  int64 id = 1;
  OrderState state = 2;
  google.type.Money amount = 3;
  repeated Item items = 4;

  message Item {
    int64 sku_id = 1;
    int32 quantity = 2;
    google.type.Money price = 3;
  }
}

message OrderEvent {
  int64 order_id = 1;
  OrderState state = 2;
  google.protobuf.Timestamp timestamp = 3;
}

enum OrderState {
  ORDERSTATE_UNKNOWN = 0;
  ORDERSTATE_CREATED = 10;
  ORDERSTATE_PAID = 20;
  ORDERSTATE_BOXING = 30;
  ORDERSTATE_WAIT_FOR_PICKUP = 40;
  ORDERSTATE_IN_DELIVERY = 50;
  ORDERSTATE_WAIT_FOR_CLIENT = 60;
  ORDERSTATE_COMPLETED = 200;
  ORDERSTATE_CANCELLED = 300;
}
